--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="desktop.css" media=" screen and (min-width:792px)">
-    <title>Restaurant</title>
+    <title>Restaurant Landing Page</title>
 </head>
 <body>
     <header>
